# flowbber

./: .cookiecutter.json  .gitignore  Jenkinsfile  LICENSE  README.rst  pyproject.toml  release.md  release.rst  requirements.dev.txt  requirements.txt  setup.py  tox.ini
doc/: aggregators.rst  conf.py  developer.rst  dynamic.rst  entities.rst  implementation.rst  index.rst  quickstart.rst  sinks.rst  sources.rst  visualization.rst
doc/_static/styles/: custom.css
doc/_templates/: layout.html
doc/tools/: tomelizer
docker/: Dockerfile  README.md  entrypoint.sh
docker/supervisord/: influxd.conf  mongod.conf
examples/: coverage.xml  example1.py  flowconf.py  pipeline1.json  pipeline1.toml
examples/advanced/: colors.tpl  flowconf.py  pipeline.json  pipeline.toml  pipeline.yaml  template.tpl  tests.xml
examples/archive/: compress.toml  extract.toml
examples/basic/: pipeline.toml  pipeline.yaml
examples/config/: pipeline.toml
examples/cpu/: pipeline.toml
examples/cpud/: cpud.py
examples/dynamic/: .gitignore  README.rst  pipeline.toml.tpl  values.yaml
examples/email/: email.tpl  pipeline.toml
examples/env/: pipeline.toml
examples/filter/: exclude1  exclude2  input.json  pipeline.toml
examples/github/: pipeline.toml
examples/journal/: journal.json
examples/lcov/: .gitignore  Makefile  hello.c  hello2.c  pipeline.toml
examples/lcov/coverage_1/: hello.c
examples/lcov/coverage_2/: hello.c
examples/local/: flowconf.py  pipeline.toml
examples/mongo/: pipeline.toml
examples/plotting/: index.html
examples/sloc/: pipeline.toml
examples/speedd/: speedd.py
examples/test/: gtest.xml  new_gtest.xml  pipeline.toml  pytest.xml
examples/valgrind/: pipeline.toml
examples/valgrind/memcheck/: Makefile  memcheck.xml  vg.c
lib/flowbber/: __init__.py  __main__.py  args.py  config.py  dynamic.py  inputs.py  local.py  logging.py  main.py  namespaces.py  pipeline.py  scheduler.py  schema.py  types.py
lib/flowbber/components/: __init__.py  aggregator.py  base.py  sink.py  source.py
lib/flowbber/entities/: __init__.py  aggregator.py  base.py  sink.py  source.py
lib/flowbber/loaders/: __init__.py  aggregator.py  filter.py  loader.py  sink.py  source.py
lib/flowbber/plugins/: __init__.py
lib/flowbber/plugins/aggregators/: __init__.py  expander.py  filter.py  lcov_merger.py
lib/flowbber/plugins/sinks/: __init__.py  archive.py  data_splitter.py  influxdb.py  lcov_html.py  mongodb.py  pprintpp.py  print.py  template.py
lib/flowbber/plugins/sources/: __init__.py  cobertura.py  config.py  cpu.py  env.py  git.py  github.py  gtest.py  json.py  lcov.py  pytest.py  sloc.py  speed.py  timestamp.py  user.py
lib/flowbber/plugins/sources/valgrind/: __init__.py  drd.py  helgrind.py  memcheck.py
lib/flowbber/utils/: __init__.py  command.py  filter.py  git.py  iso8601.py  types.py
test/: test_examples.py  test_flowbber.py  test_flowbber_args.py  test_flowbber_main.py
